# Conduit

./: .gitignore  .npmrc  .prettierignore  AGENTS.md  ARCHITECTURE.md  README.md  base-cli.toml  clippy.toml  eslint.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  prettier.config.json  rustfmt.toml  tsconfig.base.json  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
backend/service/: AGENTS.md  Cargo.toml  README.md
backend/service/crates/acp-contracts/: Cargo.toml
backend/service/crates/acp-contracts/src/: bundle.rs  error.rs  lib.rs  validate.rs
backend/service/crates/acp-contracts/tests/: protocol_captures.rs
backend/service/crates/acp-core/: Cargo.toml
backend/service/crates/acp-core/src/: error.rs  host.rs  initialize.rs  lib.rs  snapshot.rs  transport.rs  ui_event_data.rs  wire.rs
backend/service/crates/acp-core/src/host/: helpers.rs  internal.rs  prompt.rs  receive.rs  sdk_actor.rs  sdk_actor_tail.rs
backend/service/crates/acp-core/tests/: golden_testdata.rs  plan_mode_pr195_canonical.rs
backend/service/crates/acp-discovery/: Cargo.toml
backend/service/crates/acp-discovery/src/: environment.rs  error.rs  lib.rs  path.rs  provider.rs
backend/service/crates/acp-discovery/src/probe/: mod.rs  process.rs
backend/service/crates/app-api/: Cargo.toml
backend/service/crates/app-api/src/: lib.rs
backend/service/crates/app-protocol-export/: Cargo.toml
backend/service/crates/app-protocol-export/src/: contracts.rs  contracts_tests.rs  main.rs
backend/service/crates/app-protocol-export/src/contracts/: roots.rs
backend/service/crates/conduit-cli/: Cargo.toml
backend/service/crates/conduit-cli/src/: capture.rs  capture_tests.rs  capture_validation.rs  cli.rs  cli_tests.rs  error.rs  main.rs
backend/service/crates/conduit-cli/src/cli_tests/: mod.rs  parse_success.rs  rejections.rs
backend/service/crates/provider-claude/: Cargo.toml
backend/service/crates/provider-claude/src/: lib.rs
backend/service/crates/provider-codex/: Cargo.toml
backend/service/crates/provider-codex/src/: lib.rs
backend/service/crates/provider-copilot/: Cargo.toml
backend/service/crates/provider-copilot/src/: lib.rs
backend/service/crates/provider-fixture/: Cargo.toml
backend/service/crates/provider-fixture/src/: failure.rs  initialize.rs  lib.rs  load.rs  new.rs  prompt.rs  set_config.rs  tests.rs
backend/service/crates/provider-fixture/src/tests/: initialize_list.rs  load.rs  new.rs  parity.rs  prompt_general.rs  runtime.rs  support.rs
backend/service/crates/remote-access/: Cargo.toml
backend/service/crates/remote-access/src/: cipher.rs  lib.rs  offers.rs  route.rs
backend/service/crates/repo-guard/: Cargo.toml
backend/service/crates/repo-guard/src/: bootstrap.rs  clean.rs  error.rs  main.rs  process.rs  telemetry.rs  toolchain.rs
backend/service/crates/repo-guard/src/structure/: files.rs  js.rs  js_runtime.rs  mod.rs  rust.rs  source.rs  source_ast.rs  tests.rs  tests_support.rs
backend/service/crates/service-bin/: Cargo.toml
backend/service/crates/service-bin/src/: artifact.rs  cli.rs  consumer_proof.rs  error.rs  home.rs  identity.rs  local_store.rs  main.rs  replay_workflow.rs  runtime.rs  support.rs  telemetry.rs
backend/service/crates/service-bin/src/cli/: tests.rs
backend/service/crates/service-bin/src/proof/: capture.rs  home.rs  isolation.rs  mod.rs  workspace.rs
backend/service/crates/service-bin/src/replay_workflow/: capture.rs  curate.rs  promote.rs
backend/service/crates/service-bin/src/scenarios/: contracts.rs  discovery.rs  mod.rs  sessions.rs
backend/service/crates/service-bin/src/serve/: actor.rs  catalog.rs  client_logs.rs  mod.rs  presence.rs  relay.rs  relay_session.rs  tests.rs  text_connection.rs  wire.rs
backend/service/crates/service-bin/tests/: acp_replay.rs  failure_fixtures.rs  fixture_validation.rs  pairing_e2e.rs  prompt_error_e2e.rs  replay_oracle.rs
backend/service/crates/service-bin/tests/acp_replay/: fixtures.rs  history_window.rs  load_replay.rs  oracle.rs  support.rs
backend/service/crates/service-bin/tests/fixture_validation/: common.rs  hygiene.rs  protocol.rs  replay.rs  support.rs
backend/service/crates/service-runtime/: Cargo.toml
backend/service/crates/service-runtime/benches/: session_cache.rs
backend/service/crates/service-runtime/src/: app_service.rs  command.rs  consumer_protocol.rs  contracts.rs  error.rs  event.rs  lib.rs  manager.rs  manager_helpers.rs  manager_response.rs  port.rs  session_browser.rs  session_groups.rs  session_history.rs  tests.rs
backend/service/crates/service-runtime/tests/: initialize_lifecycle.rs  projects.rs  prompt_error_history.rs  runtime.rs  runtime_commands.rs  session_config_state.rs  session_history.rs  session_interactions.rs  session_new_history.rs  telemetry.rs  terminal_plan_history.rs
backend/service/crates/session-projection/: Cargo.toml
backend/service/crates/session-projection/src/: lib.rs  prompt_turn.rs  transcript.rs
backend/service/crates/session-store/: Cargo.toml
backend/service/crates/session-store/src/: history_limit.rs  ids.rs  lib.rs  open_session_state.rs  project_suggestions.rs  projects.rs  prompt_turn.rs  schema.rs  session_index.rs  settings.rs  timeline_storage.rs  transcript.rs
backend/service/crates/session-store/tests/: local_store.rs
backend/service/crates/telemetry-support/: Cargo.toml
backend/service/crates/telemetry-support/src/: lib.rs  log_files.rs
backend/service/testdata/: README.md
backend/service/testdata/failures/: disconnect-during-request.jsonl  initialize-timeout.jsonl  invalid-json-rpc.jsonl  prompt-timeout.jsonl
backend/service/testdata/golden/: claude-prompt-lifecycle.json  claude-provider-snapshot.json  claude-session-list.json  codex-prompt-lifecycle.json  codex-provider-snapshot.json  codex-session-list.json  consumer-events.json  copilot-prompt-lifecycle.json  copilot-provider-snapshot.json  copilot-session-list.json
backend/service/testdata/providers/: session-load-direct-acp-coverage.json  session-load-red-first-proof.json  session-load-verifier-summary.json
(+852 files in other folders)
