[workspace]
members = [
  "crates/acp-contracts",
  "crates/acp-core",
  "crates/acp-discovery",
  "crates/app-api",
  "crates/provider-claude",
  "crates/provider-codex",
  "crates/provider-copilot",
  "crates/service-bin",
  "crates/session-store"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
rust-version = "1.93.1"
version = "0.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_crate_dependencies = "deny"
unreachable_pub = "deny"

[workspace.lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
cognitive_complexity = "deny"
too_many_arguments = "deny"
type_complexity = "deny"
too_many_lines = "deny"
large_enum_variant = "deny"
large_stack_arrays = "deny"
wildcard_imports = "deny"
enum_glob_use = "deny"
module_name_repetitions = "deny"
map_err_ignore = "deny"
