[workspace]
members = [
  "crates/acp-contracts",
  "crates/acp-core",
  "crates/acp-discovery",
  "crates/conduit-cli",
  "crates/app-protocol-export",
  "crates/app-api",
  "crates/provider-fixture",
  "crates/provider-claude",
  "crates/provider-codex",
  "crates/provider-copilot",
  "crates/repo-guard",
  "crates/service-bin",
  "crates/service-runtime",
  "crates/session-projection",
  "crates/session-store"
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "UNLICENSED"
publish = false
rust-version = "1.93.1"
version = "0.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "deny"
deprecated_safe_2024 = "deny"
missing_unsafe_on_extern = "deny"
unsafe_attr_outside_unsafe = "deny"
static_mut_refs = "deny"
unused_crate_dependencies = "deny"
unreachable_pub = "deny"
missing_docs = "deny"
unfulfilled_lint_expectations = "deny"
unexpected_cfgs = { level = "deny", check-cfg = ['cfg()'] }

[workspace.lints.clippy]
all = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
cognitive_complexity = "deny"
too_many_arguments = "deny"
type_complexity = "deny"
too_many_lines = "deny"
large_enum_variant = "deny"
large_stack_arrays = "deny"
wildcard_imports = "deny"
enum_glob_use = "deny"
module_name_repetitions = "deny"
map_err_ignore = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
panic_in_result_fn = "deny"
allow_attributes_without_reason = "deny"
undocumented_unsafe_blocks = "deny"
