[package]
name = "acp-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent-client-protocol-schema = "=0.11.4"
jsonschema = "0.45.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
toml = "0.9.8"
tracing = "0.1.41"

[lints]
workspace = true
