[package]
name = "acp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-contracts = { path = "../acp-contracts" }
acp-discovery = { path = "../acp-discovery" }
agent-client-protocol = "=0.10.4"
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.51.1", features = ["macros", "process", "rt", "time"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.41"

[lints]
workspace = true
