[package]
name = "acp-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-contracts = { path = "../acp-contracts" }
agent-client-protocol-schema = "0.11.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[lints]
workspace = true
