[package]
name = "app-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-contracts = { path = "../acp-contracts" }
acp-core = { path = "../acp-core" }
acp-discovery = { path = "../acp-discovery" }
agent-client-protocol-schema = "0.11.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
