[package]
name = "app-protocol-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-core = { path = "../acp-core" }
agent-client-protocol-schema = "=0.11.4"
schemars = "1"
serde_json = "1"
service-runtime = { path = "../service-runtime" }

[dev-dependencies]
serde = "1"

[lints]
workspace = true
