[package]
name = "conduit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "conduit"
path = "src/main.rs"

[dependencies]
acp-discovery = { path = "../acp-discovery" }
acp-core = { path = "../acp-core" }
app-api = { path = "../app-api" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
session-projection = { path = "../session-projection" }
time = { version = "0.3.44", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.24.0"

[lints]
workspace = true
