[package]
name = "provider-fixture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-core = { path = "../acp-core" }
acp-discovery = { path = "../acp-discovery" }
agent-client-protocol-schema = "=0.11.4"
serde_json = "1.0.145"
service-runtime = { path = "../service-runtime" }

[dev-dependencies]
session-store = { path = "../session-store" }
tempfile = "3.24.0"

[lints]
workspace = true
