[package]
name = "remote-access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
hkdf = "0.12.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[lints]
workspace = true
