[package]
name = "repo-guard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
syn = { version = "2.0.110", features = ["full", "visit"] }
toml = "0.9.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
