[package]
name = "service-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-contracts = { path = "../acp-contracts" }
acp-core = { path = "../acp-core" }
acp-discovery = { path = "../acp-discovery" }
agent-client-protocol-schema = "=0.11.4"
app-api = { path = "../app-api" }
axum = { version = "0.8.7", features = ["ws"] }
futures-util = "0.3.32"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
service-runtime = { path = "../service-runtime" }
thiserror = "2.0.17"
tokio = { version = "1.51.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tower-http = { version = "0.6.8", features = ["cors"] }

[lints]
workspace = true
