[package]
name = "service-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
directories = "6.0.0"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
service-runtime = { path = "../service-runtime" }
session-store = { path = "../session-store" }
thiserror = "2.0.17"
tokio = { version = "1.51.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[lints]
workspace = true
