[package]
name = "service-bin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-discovery = { path = "../acp-discovery" }
axum = { version = "0.8.7", features = ["ws"] }
base64 = "0.22.1"
directories = "6.0.0"
futures-util = "0.3.32"
provider-fixture = { path = "../provider-fixture" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
remote-access = { path = "../remote-access" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
service-runtime = { path = "../service-runtime" }
session-store = { path = "../session-store" }
telemetry-support = { path = "../telemetry-support" }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.51.1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.23"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
acp-core = { path = "../acp-core" }
acp-discovery = { path = "../acp-discovery" }
agent-client-protocol-schema = "=0.11.4"

[lints]
workspace = true
