[package]
name = "service-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-core = { path = "../acp-core" }
acp-discovery = { path = "../acp-discovery" }
app-api = { path = "../app-api" }
criterion = { version = "0.5.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
session-store = { path = "../session-store" }
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
agent-client-protocol-schema = "=0.11.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[features]
benchmarks = ["dep:criterion"]

[lints]
workspace = true

[[bench]]
name = "session_cache"
harness = false
required-features = ["benchmarks"]
