[package]
name = "session-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
acp-core = { path = "../acp-core" }
acp-discovery = { path = "../acp-discovery" }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
session-projection = { path = "../session-projection" }
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = "0.1.41"

[lints]
workspace = true
