[package]
name = "telemetry-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
directories = "6.0.0"
thiserror = "2.0.17"
time = "0.3.44"
tracing = "0.1.41"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints]
workspace = true
